--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -e js,gql,graphql index.js",
+    "build": "nodemon build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yunus ALTIN",
