--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URI=<DB_URI>
-JWT_SECRET_KEY=<JWT_SECRET_KEY>
-JWT_EXPIRE=<JWT_EXPIRE>
+DB_URI=mongodb+srv://yunus:123456abc@cluster0.vmye3.mongodb.net/yunus?retryWrites=true&w=majority
+JWT_SECRET_KEY=mysecretlhkgfhjasfkgsf
+JWT_EXPIRE=7
