--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon -e js,gql,graphql index.js",
     "build": "nodemon build",
     "test": "echo \"Error: no test specified\" && exit 1"
