--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URI=mongodb+srv://yunus:123456abc@cluster0.vmye3.mongodb.net/movie-graphQLAPI?retryWrites=true&w=majority
+DB_URI=mongodb+srv://yunus:123456abc@cluster0.vmye3.mongodb.net/movie-graphqlAPI?retryWrites=true&w=majority
 JWT_SECRET_KEY=mysecretlhkgfhjasfkgsf
 JWT_EXPIRE=7
